# compiler-n2t

./: .gitignore  Assembler.py  Code.py  Parser.py  output.vm  pyproject.toml  readme.md  ruff.toml
.github/workflows/: ci.yml
07/BasicTest/: BasicTest.asm  BasicTestAns.asm
07/PointerTest/: PointerTest.asm
07/SimpleAdd/: SimpleAdd.asm
07/StackTest/: StackTest.asm
07/StaticTest/: StaticTest.asm
08/BasicLoop/: BasicLoop.asm
08/FibonacciElement/: FibonacciElementAns.asm  test.asm
08/NestedCall/: NestedCall.asm
08/SimpleFunction/: SimpleFunction.asm
08/StaticsTest/: StaticsTest.asm
10/test/: test.jack
11/Average/: Main.vm
11/ComplexArrays/: Main.vm
11/ConvertToBin/: Main.vm
11/Pong/: Ball.vm  Bat.vm  Main.vm  PongGame.vm
11/Seven/: Main.vm
11/Square/: Main.vm  Square.vm  SquareGame.jack  SquareGame.vm
assembler/: __init__.py  code.py  driver.py  parser.py  symboltable.py
compiler/: JackAnalyzer.py  compilation_engine.py  init_logging.py  jack_tokenizer.py  symbol_table.py  vm_writer.py
compiler/enumerations/: SegmentTypes.py  SubRoutineType.py  SymbolKind.py  TokenType.py
compiler_xml/: JackAnalyzer.py  compilation_engine.py  init_logging.py  jack_tokenizer.py
compiler_xml/enumerations/: TokenType.py
end_to_end/: end_to_end.py
test/: run_all_tests.py  test_integration.py
test/assembler/: test_code.py  test_integration.py  test_intgn_basic.py  test_parser.py
test/compiler/: test_intgn.py
test/compiler_xml/: test_intgn.py
translator/: VMTranslator.py  __init__.py  codewriter.py  parser.py
(+4 files in other folders)
